@@ -5,4 +5,4 @@ AUX open-vm.initd 1758 RMD160 49d9bf6d72cce10fc2582e595c4015a827f9f612 SHA1 7497
 AUX tools.conf 21 RMD160 88b5b8c8e088333e9c00b2e1c3f3572553342e7b SHA1 42a670b887751dbe9317624dd11068390d1780b0 SHA256 05dcb62e54991ca5546066e4d04b50be98fb0cc229168d4d73df8cf8a94c068c
 AUX xautostart.conf 59 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a SHA1 92ba86e426fdaa3de1a8aad56db2d2ac358949a1 SHA256 13398e0ffcd7005bc8c92f3cd62865d2601e52fc980a4702fa252bef5c1efcc7
 DIST open-vm-tools-2007.11.21-64693.tar.gz 2295022 RMD160 e166040e713f4b7f8fae835862128a7ec3fdca75 SHA1 5b5e8edd726a997e3db0585af010a4be3405cc67 SHA256 b00530bf578b07127880ad3107b2b98873d3e5f74876dd94644bac3883be4431
-EBUILD open-vm-tools-0.0.20071121.64693-r1.ebuild 3951 RMD160 ab56ac2608604bf3a8dca60c5544e0322e7e7e0f SHA1 e775403d161c201d3143a1791fcd1af1c5df7b2d SHA256 719cdd1cb79404ce0f3eae9b030291ae327343456f9a62ed36ac746251476b56
+EBUILD open-vm-tools-0.0.20071121.64693-r1.ebuild 3402 RMD160 5cfbe4631f50bdf44d5221a86062375bf36db81e SHA1 2e5f314a752c77bd56573ebe63528b9f4337154f SHA256 a03db0b889087b535cde874211a7fe1caeeda8c7d8ac270b24c083cfaa6a10d8
